src/objects/Account/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>