src/objects/Account/fields/CustomerPriority__c.field-meta.xml
<CustomField>
    <fullName>CustomerPriority__c</fullName>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>High</fullName><default>false</default><label>High</label></value>
            <value><fullName>Low</fullName><default>false</default><label>Low</label></value>
            <value><fullName>Medium</fullName><default>false</default><label>Medium</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>