src/objects/Account/fields/SLA__c.field-meta.xml
<CustomField>
    <fullName>SLA__c</fullName>
    <label>SLA</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
            <value><fullName>Bronze</fullName><default>false</default><label>Bronze</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>