src/objects/Account/fields/UpsellOpportunity__c.field-meta.xml
<CustomField>
    <fullName>UpsellOpportunity__c</fullName>
    <label>Upsell Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Maybe</fullName><default>false</default><label>Maybe</label></value>
            <value><fullName>No</fullName><default>false</default><label>No</label></value>
            <value><fullName>Yes</fullName><default>false</default><label>Yes</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>